--- a/index.html
+++ b/index.html
@@ -1,128 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:opsz,wght@14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo"><img src="./images/avatar-2-6235acaebf9262.png" alt=""></div>
-        <nav>
-            <a href="#">Головна</a>
-            <a href="#">Про нас</a>
-            <a href="#">Контакти</a>
-        </nav>
-        <div class="header-right">
-            <button class="login-btn">Увійти</button>
-            <a>ENG <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider"></span>
-                </label> UA</a>
-        </div>
+      <div class="container">
+      <div class="logo">
+        <img src="./images/avatar-2-6235acaebf9262.png" alt="" />
+      </div>
+      <nav>
+        <a href="#" class="navigation">Головна</a>
+        <a href="#" class="navigation">Про нас</a>
+        <a href="#" class="navigation">Контакти</a>
+      </nav>
+      <div class="header-right">
+        <button class="login-btn">Увійти</button>
+        <a class="language-switcher"
+          >ENG
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>UA</a
+        >
+      </div>
+    </div>
     </header>
     <section class="hero">
-        <div class="content">
-            <p class="language-navi">Oe perlltxe hu tsamsiyu!<br>
-                Ngari hu Eywa salew tirea, <br>
-                tokx 'ì'awn slu Na'viyä hapxì.<br>
-                Säwem nìayoeng!</p>
-            <img src="./images/Rectangle53.svg" alt="">
-            <p class="language-Ukrainian">Хоробрий воїне, звертаюся до тебе!<br>
-                Твій дух йде з Ейвою, твоє тіло залишається,<br>
-                щоб стати частиною Народу.<br>
-                Борись разом з нами!</p>
-            <button class="join-button">Приєднатися до клану</button>
-            <div class="messengers">
-                <img src="./images/inst1.png" alt="inst">
-                <img src="./images/twitter1.png" alt="twitter">
-                <img src="./images/youtube1.png" alt="youtube">
-            </div>
+      <div class="container">
+      <div class="content">
+        <p class="language-navi">
+          Oe perlltxe hu tsamsiyu!<br />
+          Ngari hu Eywa salew tirea, <br />
+          tokx 'ì'awn slu Na'viyä hapxì.<br />
+          Säwem nìayoeng!
+        </p>
+        <img src="./images/Rectangle53.svg" alt="" />
+        <p class="language-Ukrainian">
+          Хоробрий воїне, звертаюся до тебе!<br />
+          Твій дух йде з Ейвою, твоє тіло залишається,<br />
+          щоб стати частиною Народу.<br />
+          Борись разом з нами!
+        </p>
+        <button class="join-button">Приєднатися до клану</button>
+        <div class="messengers">
+          <img src="./images/inst1.png" alt="inst" />
+          <img src="./images/twitter1.png" alt="twitter" />
+          <img src="./images/youtube1.png" alt="youtube" />
         </div>
-
+      </div>
+    </div>
     </section>
     <section class="cat">
-        <p class="Jace Salli-1">
-            “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ
-        </p>
-        <place class="Jace Salli-2">
-            ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”
-        </place>
-        <p class="Jace Salli">Джейк Саллі</p>
-        <div>
-            <img src="./images/Rectangle 8.png" alt="">
-        </div>
+      <div class="container">
+      <p class="Jace-Salli-1">“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</p>
+      <place class="Jace-Salli-2">
+        ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”
+      </place>
+      <p class="Jace-Salli">Джейк Саллі</p>
+      <div>
+        <img src="./images/Rectangle 8.png" alt="" />
+      </div>
+    </div>
     </section>
     <section>
-        <button class="button-trailer">Дивитись трейлер</button>
+      <div class="container">
+      <button class="button-trailer">Дивитись трейлер</button>
+    </div>
     </section>
     <section class="dog">
-        <p class="Jace Salli-1">
-            “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ
-        </p>
-        <p class="class="Jace Salli-2>
-            ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.” </p>
-        <p class="Jace Salli">Джейк Саллі</p>
-        <div>
-            <img src="./images/Rectangle 8.png" alt="">
-        </div>
+      <div class="container">
+      <p class="Jace-Salli-1">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</p>
+      <p class="Jace-Salli-2" >ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
+      <p class="Jace-Salli">Джейк Саллі</p>
+      <div>
+        <img src="./images/Rectangle 8.png" alt="" />
+      </div>
+    </div>
     </section>
     <section>
-        <h2 class="learn language">Вчимо мову На'ві</h2>
-        <ul>
-            <li class="cards">
-                <p class="Ukrainian">Привіт</p>
-                <p><img src="./images/Rectangle 42.png" alt=""></p>
-                <p class="navi">Kaltxì</p>
-            </li>
-            <li class="cards">
-                <p class="Ukrainian">Як справи?</p>
-                <p><img src="./images/Rectangle 99.png" alt=""></p>
-                <p class="navi">Ngaru lu fpom srak?</p>
-            </li>
-            <li class="cards">
-                <p class="Ukrainian">Все добре</p>
-                <p><img src="./images/Rectangle 42.png" alt=""></p>
-                <p class="navi">Lu fpom</p>
-            </li>
-            <li class="cards">
-                <p class="Ukrainian">Дякую</p>
-                <p><img src="./images/Rectangle 42.png" alt=""></p>
-                <p class="navi">Irayo si</p>
-            </li>
-            <li class="cards">
-                <p class="Ukrainian">Я бачу тебе</p>
-                <p><img src="./images/Rectangle 99.png" alt=""></p>
-                <p class="navi">Oel ngati kameie</p>
-            </li>
-            <li class="cards">
-                <p class="Ukrainian">Слідуй за мною!</p>
-                <p><img src="./images/Rectangle 42.png" alt=""></p>
-                <p class="navi">Nong oet!</p>
-            </li>
-        </ul>
+      <div class="container">
+      <h2 class="learn-language">Вчимо мову На'ві</h2>
+      <ul>
+        <li class="cards">
+          <p class="Ukrainian">Привіт</p>
+          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p class="navi">Kaltxì</p>
+        </li>
+        <li class="cards">
+          <p class="Ukrainian">Як справи?</p>
+          <p><img src="./images/Rectangle 99.png" alt="" /></p>
+          <p class="navi">Ngaru lu fpom srak?</p>
+        </li>
+        <li class="cards">
+          <p class="Ukrainian">Все добре</p>
+          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p class="navi">Lu fpom</p>
+        </li>
+        <li class="cards">
+          <p class="Ukrainian">Дякую</p>
+          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p class="navi">Irayo si</p>
+        </li>
+        <li class="cards">
+          <p class="Ukrainian">Я бачу тебе</p>
+          <p><img src="./images/Rectangle 99.png" alt="" /></p>
+          <p class="navi">Oel ngati kameie</p>
+        </li>
+        <li class="cards">
+          <p class="Ukrainian">Слідуй за мною!</p>
+          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p class="navi">Nong oet!</p>
+        </li>
+      </ul>
+    </div>
     </section>
     <section class="cats">
-        <p class="Jace Salli-1">
-            “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,
-        </p>
-        <p class="Jace Salli-2">
-            ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.” </p>
-        <p class="Neitiri">Нейтірі</p>
-        <div>
-            <img src="./images/Rectangle 8.png" alt="">
-        </div>
+      <div class="container">
+      <p class="Jace-Salli-1">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,</p>
+      <p class="Jace-Salli-2">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
+      <p class="Neitiri">Нейтірі</p>
+      <div>
+        <img src="./images/Rectangle 8.png" alt="" />
+      </div>
+    </div>
     </section>
     <footer>
-        <img src="./images/avatar-2-6235acaebf9262.png" alt="Avatar: The Way of Water">
-        <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
-        <p class="footer-email-1">Cooperation E-mail: avatartwowcoop@gmail.com</p>
-        <p class="footer-text">©2023 Avatar: The Way Of Water. All rights reserved</p>
+      <div class="container">
+      <img
+        src="./images/avatar-2-6235acaebf9262.png"
+        alt="Avatar: The Way of Water"
+      />
+      <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
+      <p class="footer-email-1">Cooperation E-mail: avatartwowcoop@gmail.com</p>
+      <p class="footer-text">
+        ©2023 Avatar: The Way Of Water. All rights reserved
+      </p>
+    </div>
     </footer>
-</body>
-
+  </body>
 </html>
