--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Avatar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
     <header>
       <div class="container">
       <div class="logo">
-        <img src="./images/avatar-2-6235acaebf9262.png" alt="" />
+        <img src="./images/avatarlogo.png" alt="logo" />
       </div>
       <nav>
         <a href="#" class="navigation">Головна</a>
@@ -49,7 +49,7 @@
           tokx 'ì'awn slu Na'viyä hapxì.<br />
           Säwem nìayoeng!
         </p>
-        <img src="./images/Rectangle53.svg" alt="" />
+        <img src="./images/rectangle53.svg" alt="style" />
         <p class="language-Ukrainian">
           Хоробрий воїне, звертаюся до тебе!<br />
           Твій дух йде з Ейвою, твоє тіло залишається,<br />
@@ -73,7 +73,7 @@
       </place>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/Rectangle 8.png" alt="" />
+        <img src="./images/rectangle 8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -88,7 +88,7 @@
       <p class="Jace-Salli-2" >ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/Rectangle 8.png" alt="" />
+        <img src="./images/rectangle 8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -98,32 +98,32 @@
       <ul>
         <li class="cards">
           <p class="Ukrainian">Привіт</p>
-          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p><img src="./images/rectangle 42.png" alt="style" /></p>
           <p class="navi">Kaltxì</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Як справи?</p>
-          <p><img src="./images/Rectangle 99.png" alt="" /></p>
+          <p><img src="./images/rectangle 99.png" alt="style" /></p>
           <p class="navi">Ngaru lu fpom srak?</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Все добре</p>
-          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p><img src="./images/rectangle 42.png" alt="style" /></p>
           <p class="navi">Lu fpom</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Дякую</p>
-          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p><img src="./images/rectangle 42.png" alt="style" /></p>
           <p class="navi">Irayo si</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Я бачу тебе</p>
-          <p><img src="./images/Rectangle 99.png" alt="" /></p>
+          <p><img src="./images/rectangle 99.png" alt="style" /></p>
           <p class="navi">Oel ngati kameie</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Слідуй за мною!</p>
-          <p><img src="./images/Rectangle 42.png" alt="" /></p>
+          <p><img src="./images/rectangle 42.png" alt="style" /></p>
           <p class="navi">Nong oet!</p>
         </li>
       </ul>
@@ -135,14 +135,14 @@
       <p class="Jace-Salli-2">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
       <p class="Neitiri">Нейтірі</p>
       <div>
-        <img src="./images/Rectangle 8.png" alt="" />
+        <img src="./images/rectangle 8.png" alt="style" />
       </div>
     </div>
     </section>
     <footer>
       <div class="container">
       <img
-        src="./images/avatar-2-6235acaebf9262.png"
+        src="./images/avatarlogo.png"
         alt="Avatar: The Way of Water"
       />
       <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
