--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
@@ -56,7 +57,7 @@
           щоб стати частиною Народу.<br />
           Борись разом з нами!
         </p>
-        <button class="join-button">Приєднатися до клану</button>
+        <button class="join-button">Приєднатися до <br/> клану</button>
         <div class="messengers">
           <img src="./images/inst1.png" alt="inst" />
           <img src="./images/twitter1.png" alt="twitter" />
@@ -77,7 +78,7 @@
       </div>
     </div>
     </section>
-    <section>
+    <section class="trailer">
       <div class="container">
       <button class="button-trailer">Дивитись трейлер</button>
     </div>
@@ -92,10 +93,10 @@
       </div>
     </div>
     </section>
-    <section>
+    <section class="learn-language">
       <div class="container">
-      <h2 class="learn-language">Вчимо мову На'ві</h2>
-      <ul>
+      <h2 class="learn-language-title"> Вчимо мову На’ві</h2>
+      <ul class="cards-list">
         <li class="cards">
           <p class="Ukrainian">Привіт</p>
           <p><img src="./images/rectangle 42.png" alt="style" /></p>
@@ -139,7 +140,7 @@
       </div>
     </div>
     </section>
-    <footer>
+    <footer class="footer">
       <div class="container">
       <img
         src="./images/avatarlogo.png"
