--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="container">
       <div class="logo">
         <img src="./images/avatarlogo.png" alt="logo" />
       </div>
-      <nav>
-        <a href="#" class="navigation">Головна</a>
-        <a href="#" class="navigation">Про нас</a>
-        <a href="#" class="navigation">Контакти</a>
+      <nav class="nav">
+        <a href="#" class="navigation1">Головна</a>
+        <a href="#" class="navigation2">Про нас</a>
+        <a href="#" class="navigation3">Контакти</a>
       </nav>
       <div class="header-right">
         <button class="login-btn">Увійти</button>
@@ -68,13 +68,13 @@
     </section>
     <section class="cat">
       <div class="container">
-      <p class="Jace-Salli-1">“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</p>
-      <place class="Jace-Salli-2">
+      <p class="Jace-Salli-1"><h1>“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</p></h1>
+      <place class="Jace-Salli-2"><h1>
         ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”
-      </place>
+      </place></h1>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/rectangle 8.png" alt="style" />
+        <img src="./images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -83,13 +83,13 @@
       <button class="button-trailer">Дивитись трейлер</button>
     </div>
     </section>
-    <section class="dog">
+    <section class="cat">
       <div class="container">
       <p class="Jace-Salli-1">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</p>
       <p class="Jace-Salli-2" >ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/rectangle 8.png" alt="style" />
+        <img src="./images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -99,44 +99,44 @@
       <ul class="cards-list">
         <li class="cards">
           <p class="Ukrainian">Привіт</p>
-          <p><img src="./images/rectangle 42.png" alt="style" /></p>
+          <p><img src="./images/rectangle42.png" alt="style" /></p>
           <p class="navi">Kaltxì</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Як справи?</p>
-          <p><img src="./images/rectangle 99.png" alt="style" /></p>
+          <p><img src="./images/rectangle99.png" alt="style" /></p>
           <p class="navi">Ngaru lu fpom srak?</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Все добре</p>
-          <p><img src="./images/rectangle 42.png" alt="style" /></p>
+          <p><img src="./images/rectangle42.png" alt="style" /></p>
           <p class="navi">Lu fpom</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Дякую</p>
-          <p><img src="./images/rectangle 42.png" alt="style" /></p>
+          <p><img src="./images/rectangle42.png" alt="style" /></p>
           <p class="navi">Irayo si</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Я бачу тебе</p>
-          <p><img src="./images/rectangle 99.png" alt="style" /></p>
+          <p><img src="./images/rectangle99.png" alt="style" /></p>
           <p class="navi">Oel ngati kameie</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Слідуй за мною!</p>
-          <p><img src="./images/rectangle 42.png" alt="style" /></p>
+          <p><img src="./images/rectangle42.png" alt="style" /></p>
           <p class="navi">Nong oet!</p>
         </li>
       </ul>
     </div>
     </section>
-    <section class="cats">
+    <section class="cat">
       <div class="container">
       <p class="Jace-Salli-1">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,</p>
       <p class="Jace-Salli-2">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
       <p class="Neitiri">Нейтірі</p>
       <div>
-        <img src="./images/rectangle 8.png" alt="style" />
+        <img src="./images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
