--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
     <header class="header">
       <div class="container">
       <div class="logo">
-        <img src="./images/avatarlogo.png" alt="logo" />
+        <img src="./crs/styles/images/avatarlogo.png" alt="logo" />
       </div>
       <nav class="nav">
         <a href="#" class="navigation1">Головна</a>
@@ -50,7 +50,7 @@
           tokx 'ì'awn slu Na'viyä hapxì.<br />
           Säwem nìayoeng!
         </p>
-        <img src="./images/rectangle53.svg" alt="style" />
+        <img src="./crs/styles/images/rectangle53.svg" alt="style" />
         <p class="language-Ukrainian">
           Хоробрий воїне, звертаюся до тебе!<br />
           Твій дух йде з Ейвою, твоє тіло залишається,<br />
@@ -59,9 +59,9 @@
         </p>
         <button class="join-button">Приєднатися до <br/> клану</button>
         <div class="messengers">
-          <img src="./images/inst1.png" alt="inst" />
-          <img src="./images/twitter1.png" alt="twitter" />
-          <img src="./images/youtube1.png" alt="youtube" />
+          <img src="./crs/styles/images/inst1.png" alt="inst" />
+          <img src="./crs/styles/images/twitter1.png" alt="twitter" />
+          <img src="./crs/styles/images/youtube1.png" alt="youtube" />
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
       </place></h1>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/rectangle8.png" alt="style" />
+        <img src="./crs/styles/images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -89,7 +89,7 @@
       <p class="Jace-Salli-2" >ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
       <p class="Jace-Salli">Джейк Саллі</p>
       <div>
-        <img src="./images/rectangle8.png" alt="style" />
+        <img src="./crs/styles/images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
@@ -99,32 +99,32 @@
       <ul class="cards-list">
         <li class="cards">
           <p class="Ukrainian">Привіт</p>
-          <p><img src="./images/rectangle42.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
           <p class="navi">Kaltxì</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Як справи?</p>
-          <p><img src="./images/rectangle99.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle99.png" alt="style" /></p>
           <p class="navi">Ngaru lu fpom srak?</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Все добре</p>
-          <p><img src="./images/rectangle42.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
           <p class="navi">Lu fpom</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Дякую</p>
-          <p><img src="./images/rectangle42.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
           <p class="navi">Irayo si</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Я бачу тебе</p>
-          <p><img src="./images/rectangle99.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle99.png" alt="style" /></p>
           <p class="navi">Oel ngati kameie</p>
         </li>
         <li class="cards">
           <p class="Ukrainian">Слідуй за мною!</p>
-          <p><img src="./images/rectangle42.png" alt="style" /></p>
+          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
           <p class="navi">Nong oet!</p>
         </li>
       </ul>
@@ -136,14 +136,14 @@
       <p class="Jace-Salli-2">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
       <p class="Neitiri">Нейтірі</p>
       <div>
-        <img src="./images/rectangle8.png" alt="style" />
+        <img src="./crs/styles/images/rectangle8.png" alt="style" />
       </div>
     </div>
     </section>
     <footer class="footer">
       <div class="container">
       <img
-        src="./images/avatarlogo.png"
+        src="./crs/styles/images/avatarlogo.png"
         alt="Avatar: The Way of Water"
       />
       <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
