--- a/index.html
+++ b/index.html
@@ -14,144 +14,171 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/styles/reset.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
 
   <body>
     <header class="header">
-      <div class="container">
-      <div class="logo">
-        <img src="./crs/styles/images/avatarlogo.png" alt="logo" />
-      </div>
-      <nav class="nav">
-        <a href="#" class="navigation1">Головна</a>
-        <a href="#" class="navigation2">Про нас</a>
-        <a href="#" class="navigation3">Контакти</a>
-      </nav>
-      <div class="header-right">
-        <button class="login-btn">Увійти</button>
-        <a class="language-switcher"
-          >ENG
-          <label class="switch">
-            <input type="checkbox" />
-            <span class="slider"></span>
-          </label>UA</a
-        >
-      </div>
-    </div>
-    </header>
-    <section class="hero">
-      <div class="container">
-      <div class="content">
-        <p class="language-navi">
-          Oe perlltxe hu tsamsiyu!<br />
-          Ngari hu Eywa salew tirea, <br />
-          tokx 'ì'awn slu Na'viyä hapxì.<br />
-          Säwem nìayoeng!
-        </p>
-        <img src="./crs/styles/images/rectangle53.svg" alt="style" />
-        <p class="language-Ukrainian">
-          Хоробрий воїне, звертаюся до тебе!<br />
-          Твій дух йде з Ейвою, твоє тіло залишається,<br />
-          щоб стати частиною Народу.<br />
-          Борись разом з нами!
-        </p>
-        <button class="join-button">Приєднатися до <br/> клану</button>
-        <div class="messengers">
-          <img src="./crs/styles/images/inst1.png" alt="inst" />
-          <img src="./crs/styles/images/twitter1.png" alt="twitter" />
-          <img src="./crs/styles/images/youtube1.png" alt="youtube" />
+      <div class="container header-container">
+        <div class="logo">
+          <img src="./src/images/avatarlogo.png" alt="logo" />
+        </div>
+        <nav class="nav">
+          <a href="#" class="navigation1">Головна</a>
+          <a href="#" class="navigation2">Про нас</a>
+          <a href="#" class="navigation3">Контакти</a>
+        </nav>
+        <div class="header-right">
+          <button class="login-btn">Увійти</button>
+          <a class="language-switcher"
+            >ENG
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider"></span> </label
+            >UA</a
+          >
         </div>
       </div>
-    </div>
-    </section>
-    <section class="cat">
-      <div class="container">
-      <p class="Jace-Salli-1"><h1>“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</p></h1>
-      <place class="Jace-Salli-2"><h1>
-        ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”
-      </place></h1>
-      <p class="Jace-Salli">Джейк Саллі</p>
-      <div>
-        <img src="./crs/styles/images/rectangle8.png" alt="style" />
-      </div>
-    </div>
-    </section>
-    <section class="trailer">
-      <div class="container">
-      <button class="button-trailer">Дивитись трейлер</button>
-    </div>
-    </section>
-    <section class="cat">
-      <div class="container">
-      <p class="Jace-Salli-1">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</p>
-      <p class="Jace-Salli-2" >ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
-      <p class="Jace-Salli">Джейк Саллі</p>
-      <div>
-        <img src="./crs/styles/images/rectangle8.png" alt="style" />
-      </div>
-    </div>
-    </section>
-    <section class="learn-language">
-      <div class="container">
-      <h2 class="learn-language-title"> Вчимо мову На’ві</h2>
-      <ul class="cards-list">
-        <li class="cards">
-          <p class="Ukrainian">Привіт</p>
-          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
-          <p class="navi">Kaltxì</p>
-        </li>
-        <li class="cards">
-          <p class="Ukrainian">Як справи?</p>
-          <p><img src="./crs/styles/images/rectangle99.png" alt="style" /></p>
-          <p class="navi">Ngaru lu fpom srak?</p>
-        </li>
-        <li class="cards">
-          <p class="Ukrainian">Все добре</p>
-          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
-          <p class="navi">Lu fpom</p>
-        </li>
-        <li class="cards">
-          <p class="Ukrainian">Дякую</p>
-          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
-          <p class="navi">Irayo si</p>
-        </li>
-        <li class="cards">
-          <p class="Ukrainian">Я бачу тебе</p>
-          <p><img src="./crs/styles/images/rectangle99.png" alt="style" /></p>
-          <p class="navi">Oel ngati kameie</p>
-        </li>
-        <li class="cards">
-          <p class="Ukrainian">Слідуй за мною!</p>
-          <p><img src="./crs/styles/images/rectangle42.png" alt="style" /></p>
-          <p class="navi">Nong oet!</p>
-        </li>
-      </ul>
-    </div>
-    </section>
-    <section class="cat">
-      <div class="container">
-      <p class="Jace-Salli-1">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,</p>
-      <p class="Jace-Salli-2">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
-      <p class="Neitiri">Нейтірі</p>
-      <div>
-        <img src="./crs/styles/images/rectangle8.png" alt="style" />
-      </div>
-    </div>
-    </section>
+    </header>
+    <body>
+      <section class="hero">
+        <div class="container">
+          <div class="content">
+            <p class="language-navi">
+              Oe perlltxe hu tsamsiyu!<br />
+              Ngari hu Eywa salew tirea, <br />
+              tokx 'ì'awn slu Na'viyä hapxì.<br />
+              Säwem nìayoeng!
+            </p>
+            <img src="./src/images/rectangle53.svg" alt="background" />
+            <p class="language-Ukrainian">
+              Хоробрий воїне, звертаюся до тебе!<br />
+              Твій дух йде з Ейвою, твоє тіло залишається,<br />
+              щоб стати частиною Народу.<br />
+              Борись разом з нами!
+            </p>
+            <button class="join-button">
+              Приєднатися до <br />
+              клану
+            </button>
+            <div class="messengers">
+              <img src="./src/images/inst1.png" alt="inst" />
+              <img src="./src/images/twitter1.png" alt="twitter" />
+              <img src="./src/images/youtube1.png" alt="youtube" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <h2 class="quote-title">
+            “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ<br />
+            ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”<br />
+          </h2>
+          <p class="quote-name">Джейк Саллі</p>
+          <div>
+            <img
+              class="quote-img"
+              src="./src/images/rectangle8.png"
+              alt="decoration"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="trailer">
+        <div class="container">
+          <button class="button-trailer">Дивитись трейлер</button>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <h2 class="quote-title">
+            “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ<br />
+            ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”<br />
+          </h2>
+          <p class="quote-name">Джейк Саллі</p>
+          <div>
+            <img
+              class="quote-img"
+              src="./src/images/rectangle8.png"
+              alt="decoration"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="learn-language">
+        <div class="container">
+          <h2 class="learn-language-title">Вчимо мову На’ві</h2>
+          <ul class="cards-list">
+            <li class="cards">
+              <p class="Ukrainian">Привіт</p>
+              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+              <p class="navi">Kaltxì</p>
+            </li>
+            <li class="cards">
+              <p class="Ukrainian">Як справи?</p>
+              <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
+              <p class="navi">Ngaru lu fpom srak?</p>
+            </li>
+            <li class="cards">
+              <p class="Ukrainian">Все добре</p>
+              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+              <p class="navi">Lu fpom</p>
+            </li>
+            <li class="cards">
+              <p class="Ukrainian">Дякую</p>
+              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+              <p class="navi">Irayo si</p>
+            </li>
+            <li class="cards">
+              <p class="Ukrainian">Я бачу тебе</p>
+              <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
+              <p class="navi">Oel ngati kameie</p>
+            </li>
+            <li class="cards">
+              <p class="Ukrainian">Слідуй за мною!</p>
+              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+              <p class="navi">Nong oet!</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <h2 class="quote-title">
+            “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,<br />
+            ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”<br />
+          </h2>
+          <p class="quote-name">Нейтірі</p>
+          <div>
+            <img
+              class="quote-img"
+              src="./src/images/rectangle8.png"
+              alt="decoration"
+            />
+          </div>
+        </div>
+      </section>
+    </body>
     <footer class="footer">
-      <div class="container">
-      <img
-        src="./crs/styles/images/avatarlogo.png"
-        alt="Avatar: The Way of Water"
-      />
-      <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
-      <p class="footer-email-1">Cooperation E-mail: avatartwowcoop@gmail.com</p>
-      <p class="footer-text">
-        ©2023 Avatar: The Way Of Water. All rights reserved
-      </p>
-    </div>
+      <div class="container container-footer">
+        <div>
+          <img
+            src="./src/images/avatarlogo.png"
+            alt="Avatar: The Way of Water"
+          />
+        </div>
+        <div>
+          <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
+          <p class="footer-email-1">
+            Cooperation E-mail: avatartwowcoop@gmail.com
+          </p>
+          <p class="footer-text">
+            ©2023 Avatar: The Way Of Water. All rights reserved
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
