--- a/index.html
+++ b/index.html
@@ -31,136 +31,126 @@
         </nav>
         <div class="header-right">
           <button class="login-btn">Увійти</button>
-          <a class="language-switcher"
-            >ENG
-            <label class="switch">
-              <input type="checkbox" />
-              <span class="slider"></span> </label
-            >UA</a
-          >
+          <a class="language-switcher" href="#">ENG</a>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>
+          <a href="#">UA</a>
         </div>
       </div>
     </header>
-    <body>
-      <section class="hero">
-        <div class="container">
-          <div class="content">
-            <p class="language-navi">
-              Oe perlltxe hu tsamsiyu!<br />
-              Ngari hu Eywa salew tirea, <br />
-              tokx 'ì'awn slu Na'viyä hapxì.<br />
-              Säwem nìayoeng!
-            </p>
-            <img src="./src/images/rectangle53.svg" alt="background" />
-            <p class="language-Ukrainian">
-              Хоробрий воїне, звертаюся до тебе!<br />
-              Твій дух йде з Ейвою, твоє тіло залишається,<br />
-              щоб стати частиною Народу.<br />
-              Борись разом з нами!
-            </p>
-            <button class="join-button">
-              Приєднатися до <br />
-              клану
-            </button>
-            <div class="messengers">
-              <img src="./src/images/inst1.png" alt="inst" />
-              <img src="./src/images/twitter1.png" alt="twitter" />
-              <img src="./src/images/youtube1.png" alt="youtube" />
-            </div>
-          </div>
+
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="content">
+          <p class="language-navi">
+            Oe perlltxe hu tsamsiyu!<br />
+            Ngari hu Eywa salew tirea, <br />
+            tokx 'ì'awn slu Na'viyä hapxì.<br />
+            Säwem nìayoeng!
+          </p>
+          <img src="./src/images/rectangle53.svg" alt="background" />
+          <p class="language-Ukrainian">
+            Хоробрий воїне, звертаюся до тебе!<br />
+            Твій дух йде з Ейвою, твоє тіло залишається,<br />
+            щоб стати частиною Народу.<br />
+            Борись разом з нами!
+          </p>
+          <button class="join-button">
+            Приєднатися до <br />
+            клану
+          </button>
         </div>
-      </section>
-      <section class="quote">
-        <div class="container">
-          <h2 class="quote-title">
-            “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ<br />
-            ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”<br />
-          </h2>
-          <p class="quote-name">Джейк Саллі</p>
-          <div>
-            <img
-              class="quote-img"
-              src="./src/images/rectangle8.png"
-              alt="decoration"
-            />
-          </div>
-        </div>
-      </section>
-      <section class="trailer">
-        <div class="container">
-          <button class="button-trailer">Дивитись трейлер</button>
-        </div>
-      </section>
-      <section class="quote">
-        <div class="container">
-          <h2 class="quote-title">
-            “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ<br />
-            ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”<br />
-          </h2>
-          <p class="quote-name">Джейк Саллі</p>
-          <div>
-            <img
-              class="quote-img"
-              src="./src/images/rectangle8.png"
-              alt="decoration"
-            />
-          </div>
-        </div>
-      </section>
-      <section class="learn-language">
-        <div class="container">
-          <h2 class="learn-language-title">Вчимо мову На’ві</h2>
-          <ul class="cards-list">
-            <li class="cards">
-              <p class="Ukrainian">Привіт</p>
-              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
-              <p class="navi">Kaltxì</p>
-            </li>
-            <li class="cards">
-              <p class="Ukrainian">Як справи?</p>
-              <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
-              <p class="navi">Ngaru lu fpom srak?</p>
-            </li>
-            <li class="cards">
-              <p class="Ukrainian">Все добре</p>
-              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
-              <p class="navi">Lu fpom</p>
-            </li>
-            <li class="cards">
-              <p class="Ukrainian">Дякую</p>
-              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
-              <p class="navi">Irayo si</p>
-            </li>
-            <li class="cards">
-              <p class="Ukrainian">Я бачу тебе</p>
-              <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
-              <p class="navi">Oel ngati kameie</p>
-            </li>
-            <li class="cards">
-              <p class="Ukrainian">Слідуй за мною!</p>
-              <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
-              <p class="navi">Nong oet!</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="quote">
-        <div class="container">
-          <h2 class="quote-title">
-            “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,<br />
-            ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”<br />
-          </h2>
-          <p class="quote-name">Нейтірі</p>
-          <div>
-            <img
-              class="quote-img"
-              src="./src/images/rectangle8.png"
-              alt="decoration"
-            />
-          </div>
-        </div>
-      </section>
-    </body>
+        <ul class="messengers">
+          <li class="messenger">
+            <a href="https://www.instagram.com/avatar/" target="_blank"
+              ><img src="../Avatar/src/images/inst1.png" alt="telegram"
+            /></a>
+          </li>
+          <li class="messenger">
+            <a href="" target="_blank"
+              ><img src="../Avatar/src/images/twitter1.png" alt="facebook"
+            /></a>
+          </li>
+          <li class="messenger">
+            <a href="https://www.youtube.com/@AvatarOfficial" target="_blank"
+              ><img src="../Avatar/src/images/youtube1.png" alt="twitter"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="quote">
+      <div class="container">
+        <h2 class="quote-title">
+          “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ<br />
+          ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”<br />
+        </h2>
+        <p class="quote-name">Джейк Саллі</p>
+      </div>
+    </section>
+    <section class="trailer">
+      <div class="container">
+        <button class="button-trailer">Дивитись трейлер</button>
+      </div>
+    </section>
+    <section class="quote">
+      <div class="container">
+        <h2 class="quote-title">
+          “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ<br />
+          ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”<br />
+        </h2>
+        <p class="quote-name">Джейк Саллі</p>
+      </div>
+    </section>
+    <section class="learn-language">
+      <div class="container">
+        <h2 class="learn-language-title">Вчимо мову На’ві</h2>
+        <ul class="cards-list">
+          <li class="cards">
+            <p class="Ukrainian">Привіт</p>
+            <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+            <p class="navi">Kaltxì</p>
+          </li>
+          <li class="cards">
+            <p class="Ukrainian">Як справи?</p>
+            <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
+            <p class="navi">Ngaru lu fpom srak?</p>
+          </li>
+          <li class="cards">
+            <p class="Ukrainian">Все добре</p>
+            <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+            <p class="navi">Lu fpom</p>
+          </li>
+          <li class="cards">
+            <p class="Ukrainian">Дякую</p>
+            <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+            <p class="navi">Irayo si</p>
+          </li>
+          <li class="cards">
+            <p class="Ukrainian">Я бачу тебе</p>
+            <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
+            <p class="navi">Oel ngati kameie</p>
+          </li>
+          <li class="cards">
+            <p class="Ukrainian">Слідуй за мною!</p>
+            <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
+            <p class="navi">Nong oet!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="quote">
+      <div class="container">
+        <h2 class="quote-title">
+          “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,<br />
+          ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”<br />
+        </h2>
+        <p class="quote-name">Нейтірі</p>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="container container-footer">
         <div>
@@ -169,11 +159,15 @@
             alt="Avatar: The Way of Water"
           />
         </div>
-        <div>
-          <p class="footer-email">Q&A E-mail: avatartwowqa@gmail.com</p>
-          <p class="footer-email-1">
-            Cooperation E-mail: avatartwowcoop@gmail.com
-          </p>
+        <div class="footer-mails">
+          <ul>
+            <li class=""><p class="footer-email">Q&A E-mail: </p>
+            <a href="mailto:avatartwowqa@gmail.com">avatartwowqa@gmail.com</a>
+            </li>
+            <li><p class="footer-email"> Cooperation E-mail: </p>
+              <a href="mailto:avatartwowcoop@gmail.com">avatartwowcoop@gmail.com</a>
+              </li>
+          </ul>
           <p class="footer-text">
             ©2023 Avatar: The Way Of Water. All rights reserved
           </p>
