--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="checkbox" />
             <span class="slider"></span>
           </label>
-          <a href="#">UA</a>
+          <a href="#" class="language-switcher">UA</a>
         </div>
       </div>
     </header>
