--- a/index2.html
+++ b/index2.html
@@ -25,19 +25,17 @@
           <img src="./src/images/avatarlogo.png" alt="logo" />
         </div>
         <nav class="nav">
-          <a href="#" class="navigation1">Головна</a>
-          <a href="#" class="navigation2">Про нас</a>
-          <a href="#" class="navigation3">Контакти</a>
+          <a href="#" class="navigation1">Main</a>
+          <a href="#" class="navigation2">About us</a>
+          <a href="#" class="navigation3">Contacts</a>
         </nav>
         <div class="header-right">
-          <button class="login-btn">Увійти</button>
-          <a href="./index2.html"></a>
+          <button class="login-btn">Log In</button>
           <a class="language-switcher" href="#">ENG</a>
           <label class="switch">
             <input type="checkbox" />
             <span class="slider"></span>
           </label>
-          <a href="./index.html"></a>
           <a href="#" class="language-switcher">UA</a>
         </div>
       </div>
@@ -54,14 +52,14 @@
           </p>
           <img src="./src/images/rectangle53.svg" alt="background" />
           <p class="language-Ukrainian">
-            Хоробрий воїне, звертаюся до тебе!<br />
-            Твій дух йде з Ейвою, твоє тіло залишається,<br />
-            щоб стати частиною Народу.<br />
-            Борись разом з нами!
+            I'm speaking with the warrior!<br />
+            Your spirit goes with Eywa, <br />
+            your body stays behind to <br />
+            become part of the People.<br />
+            Fight with us!
           </p>
           <button class="join-button">
-            Приєднатися до <br />
-            клану
+            Join clan
           </button>
         </div>
         <ul class="messengers">
@@ -86,58 +84,58 @@
     <section class="quote">
       <div class="container">
         <h2 class="quote-title">
-          “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ<br />
-          ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”<br />
+            “A LOT OF PEOPLE FROM THE SKY ARE GONNA COME. <br />
+            THEY’RE GONNA COME LIKE A RAIN THAT NEVER ENDS.”<br />
         </h2>
-        <p class="quote-name">Джейк Саллі</p>
+        <p class="quote-name">JAKE SULLY</p>
       </div>
     </section>
     <section class="trailer">
       <div class="container">
         <a href="https://www.youtube.com/watch?v=d9MyW72ELq0">
-        <button class="button-trailer" >  Дивитись трейлер</button></a>
+        <button class="button-trailer" > WATCH TRAILER</button></a>
       </div>
     </section>
     <section class="quote">
       <div class="container">
         <h2 class="quote-title">
-          “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ<br />
-          ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”<br />
+            “ALL ENERGY IS ONLY BORROWED, AND ONE DAY<br />
+            YOU HAVE TO GIVE IT BACK.”<br />
         </h2>
-        <p class="quote-name">Джейк Саллі</p>
+        <p class="quote-name">JAKE SULLY</p>
       </div>
     </section>
     <section class="learn-language">
       <div class="container">
-        <h2 class="learn-language-title">Вчимо мову На’ві</h2>
+        <h2 class="learn-language-title">Let's learn the Na'vi language</h2>
         <ul class="cards-list">
           <li class="cards">
-            <p class="Ukrainian">Привіт</p>
+            <p class="Ukrainian">Hello</p>
             <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
             <p class="navi">Kaltxì</p>
           </li>
           <li class="cards">
-            <p class="Ukrainian">Як справи?</p>
+            <p class="Ukrainian">How Are You?</p>
             <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
             <p class="navi">Ngaru lu fpom srak?</p>
           </li>
           <li class="cards">
-            <p class="Ukrainian">Все добре</p>
+            <p class="Ukrainian">I'm Well</p>
             <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
             <p class="navi">Lu fpom</p>
           </li>
           <li class="cards">
-            <p class="Ukrainian">Дякую</p>
+            <p class="Ukrainian">Thank you</p>
             <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
             <p class="navi">Irayo si</p>
           </li>
           <li class="cards">
-            <p class="Ukrainian">Я бачу тебе</p>
+            <p class="Ukrainian">I See You</p>
             <p><img src="./src/images/rectangle99.png" alt="decoration2" /></p>
             <p class="navi">Oel ngati kameie</p>
           </li>
           <li class="cards">
-            <p class="Ukrainian">Слідуй за мною!</p>
+            <p class="Ukrainian">Follow me!</p>
             <p><img src="./src/images/rectangle42.png" alt="decoration1" /></p>
             <p class="navi">Nong oet!</p>
           </li>
@@ -147,10 +145,10 @@
     <section class="quote">
       <div class="container">
         <h2 class="quote-title">
-          “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,<br />
-          ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”<br />
+            “OUR GREAT MOTHER DOES NOT TAKE SIDES,<br />
+            SHE PROTECTS ONLY THE BALANCE OF LIFE.”<br />
         </h2>
-        <p class="quote-name">Нейтірі</p>
+        <p class="quote-name">NEYTIRI</p>
       </div>
     </section>
 
