--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
         </nav>
         <div class="header-right">
           <button class="login-btn">Увійти</button>
-          <a href="./index2.html"></a>
-          <a class="language-switcher" href="#">ENG</a>
+          <a class="language-switcher" href="./home-eng.html">ENG</a>
           <label class="switch">
             <input type="checkbox" />
             <span class="slider"></span>
           </label>
-          <a href="./index.html"></a>
-          <a href="#" class="language-switcher">UA</a>
+          <a href="./index.html" class="language-switcher">UA</a>
         </div>
       </div>
     </header>
@@ -164,10 +162,10 @@
         </div>
         <div class="footer-mails">
           <ul>
-            <li class=""><p class="footer-email">Q&A E-mail: </p>
+            <li class="mails-item"><p class="footer-email">Q&A E-mail: </p>
             <a href="mailto:avatartwowqa@gmail.com">avatartwowqa@gmail.com</a>
             </li>
-            <li><p class="footer-email"> Cooperation E-mail: </p>
+            <li class="mails-item"><p class="footer-email"> Cooperation E-mail: </p>
               <a href="mailto:avatartwowcoop@gmail.com">avatartwowcoop@gmail.com</a>
               </li>
           </ul>
