--- a/index.html
+++ b/index.html
@@ -65,17 +65,19 @@
         <ul class="messengers">
           <li class="messenger">
             <a href="https://www.instagram.com/avatar/" target="_blank"
-              ><img src="../Avatar/src/images/inst1.png" alt="telegram"
-            /></a>
+              ><svg class="messenger-icon">
+                <use href="./src/images/icons.svg#icon-inst-1"></use>
+              </svg>
+            </a>
           </li>
           <li class="messenger">
             <a href="" target="_blank"
-              ><img src="../Avatar/src/images/twitter1.png" alt="facebook"
+              ><img src="../Avatar/src/images/twitter1.png" alt="twitter"
             /></a>
           </li>
           <li class="messenger">
             <a href="https://www.youtube.com/@AvatarOfficial" target="_blank"
-              ><img src="../Avatar/src/images/youtube1.png" alt="twitter"
+              ><img src="../Avatar/src/images/youtube1.png" alt="youtube"
             /></a>
           </li>
         </ul>
