--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
-
+  
   <body>
     <header class="header">
       <div class="container header-container">
@@ -40,8 +40,10 @@
         </div>
       </div>
     </header>
-
-    <section class="hero">
+<main class="main">
+    <section  id="hero" class="hero">
+      
+        
       <div class="container hero-container">
         <div class="content">
           <p class="language-navi">
@@ -201,7 +203,7 @@
         <p class="quote-name">Нейтірі</p>
       </div>
     </section>
-
+</main>
     <footer class="footer">
       <div class="container container-footer">
         <div>
@@ -224,6 +226,7 @@
           </p>
         </div>
       </div>
+      <a href="#hero" class="to-top">to top</a>
     </footer>
     <script type="module" src="./src/index.js"></script>
   </body>
